--- a/bio.html
+++ b/bio.html
@@ -28,6 +28,6 @@
 		</style>
 	</head>
 	<body class="markdown-body">
-			<p>Eric Nalisnick is an assistant professor at the University of Amsterdam.  He is also an ELLIS scholar and NWO Veni fellow.  His research interests span statistical machine learning and probabilistic modeling, with an emphasis on human-in-the-loop learning, specifying prior knowledge, detecting distribution shift, and quantifying uncertainty in deep learning.  He previously was a postdoctoral researcher at the University of Cambridge and a PhD student at the University of California, Irvine.  Eric has also held research positions at DeepMind, Microsoft, Twitter, and Amazon.</p>
+			<p>Xuming Ran is a good man</p>
 	</body>
 </html>
