--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Eric Nalisnick</title>
+		<title>Xuming Ran'Bio</title>
 		<link rel="stylesheet" href="./style.css">
 		<style>
 			.markdown-body {
@@ -28,6 +28,7 @@
 		</style>
 	</head>
 	<body class="markdown-body">
-			<p>Xuming Ran is a good man</p>
+		
+		<p>Xuming Ran is currently working as a research engineer at Shanghai AI Laboratory. He is also an IEEE member. His research interests include computational neuroscience, brain-inspired computing, computer vision, genome variants detection, etc. He has published research articles in IEEE Trans NNLS, Neural Networks, J Neurosci Meth, etc., with more than 170 citations on Google Scholar. Also, he has long served as a reviewer for MICCAI, IJCNN, IEEE WCCI, Pattern Recognition, Pattern Recognition Letters, Heliyon, etc. He was previously an undergraduate student at Chongqing Jiaotong University and won the third prize in the International Collegiate Competition on Brain-inspired Computing in 2018. Meanwhile, he participated in summer schools organized by Cold Spring Harbor Laboratory and Tsinghua Laboratory of Brain and Intelligence . He has also held research positions at Tsinghua University, Communication University of China, and Southern University of Science and Technology.</p>
 	</body>
 </html>
